--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -12,21 +12,21 @@
 <tr>
 <td>&nbsp;</td>
 <td>methodTC_01</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
+<td>smokeSuite </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>methodBeforeClass</td>
-<td>smokeSuite regressionSUite </td>
+<td>methodTC_02</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>methodBeforeMethod</td>
+<td>beforeMethod</td>
 <td>smokeSuite regressionSUite </td>
 </tr>
 <tr>
@@ -34,15 +34,10 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>methodAfterMethod</td>
+<td>afterMethod</td>
 <td>smokeSuite regressionSUite </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>methodAfterClass</td>
-<td>smokeSuite regressionSUite </td>
 </tr>
 </table>
