--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,18 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="84a89d">  <td>25/02/21 17:54:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.methodBeforeClass()[pri:0, instance:createLeads.TC_01@6933b6c6]">&gt;&gt;methodBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1254904160</td>   <td></td> </tr>
-<tr bgcolor="84a89d">  <td>25/02/21 17:54:28</td>   <td>17664</td> <td title="&lt;&lt;BaseClass.methodAfterSuite()[pri:0, instance:createLeads.TC_01@6933b6c6]">&lt;&lt;methodAfterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1254904160</td>   <td></td> </tr>
-<tr bgcolor="84a89d">  <td>25/02/21 17:54:27</td>   <td>17544</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.methodAfterClass()[pri:0, instance:createLeads.TC_01@6933b6c6]">&lt;&lt;methodAfterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="84a89d">  <td>25/02/21 17:54:10</td>   <td>-32</td> <td title="&gt;&gt;BaseClass.methodBeforeSuite()[pri:0, instance:createLeads.TC_01@6933b6c6]">&gt;&gt;methodBeforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1254904160</td>   <td></td> </tr>
-<tr bgcolor="80b48f">  <td>25/02/21 17:54:21</td>   <td>10996</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01.methodTC_01()[pri:0, instance:createLeads.TC_01@6933b6c6]">methodTC_01</td> 
-  <td>main@1254904160</td>   <td></td> </tr>
-<tr bgcolor="84a89d">  <td>25/02/21 17:54:27</td>   <td>17342</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.methodAfterMethod()[pri:0, instance:createLeads.TC_01@6933b6c6]">&lt;&lt;methodAfterMethod</td> 
-<td>&nbsp;</td>  <td>main@1254904160</td>   <td></td> </tr>
-<tr bgcolor="84a89d">  <td>25/02/21 17:54:15</td>   <td>5516</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.methodBeforeMethod()[pri:0, instance:createLeads.TC_01@6933b6c6]">&gt;&gt;methodBeforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1254904160</td>   <td></td> </tr>
+<tr bgcolor="627689">  <td>25/02/23 16:31:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01.methodTC_01()[pri:0, instance:createLeads.TC_01@6025e1b6]">methodTC_01</td> 
+  <td>main@1554547125</td>   <td></td> </tr>
+<tr bgcolor="c7b8ac">  <td>25/02/23 16:32:05</td>   <td>30109</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod()[pri:0, instance:createLeads.TC_01@6025e1b6]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
+<tr bgcolor="627689">  <td>25/02/23 16:32:05</td>   <td>30096</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01.methodTC_02()[pri:0, instance:createLeads.TC_01@6025e1b6]">methodTC_02</td> 
+  <td>main@1554547125</td>   <td></td> </tr>
+<tr bgcolor="c7b8ac">  <td>25/02/23 16:32:05</td>   <td>30109</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod()[pri:0, instance:createLeads.TC_01@6025e1b6]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
+<tr bgcolor="c7b8ac">  <td>25/02/23 16:31:55</td>   <td>20831</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod()[pri:0, instance:createLeads.TC_01@6025e1b6]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
+<tr bgcolor="c7b8ac">  <td>25/02/23 16:31:55</td>   <td>20831</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod()[pri:0, instance:createLeads.TC_01@6025e1b6]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
+<tr bgcolor="c7b8ac">  <td>25/02/23 16:32:08</td>   <td>33719</td> <td title="&lt;&lt;BaseClass.methodAfterSuite()[pri:0, instance:createLeads.TC_01@6025e1b6]">&lt;&lt;methodAfterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
+<tr bgcolor="c7b8ac">  <td>25/02/23 16:31:24</td>   <td>-10226</td> <td title="&gt;&gt;BaseClass.beforeSuite()[pri:0, instance:createLeads.TC_01@6025e1b6]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
 </table>
