--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,50 +4,38 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>createContact.CreateContact_T01Test</td>
+<td>createLeads.TC_01</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>tc01Test</td>
+<td>methodTC_01</td>
 <td>smokeSuite </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>demo</td>
+<td>methodTC_02</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>methodBeforeClass</td>
-<td>smokeSuite regressionSUite </td>
-</tr>
+<td>beforeMethod</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>methodBeforeMethod</td>
-<td>smokeSuite regressionSUite </td>
-</tr>
-<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>methodAfterMethod</td>
-<td>smokeSuite regressionSUite </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>methodAfterClass</td>
-<td>smokeSuite regressionSUite </td>
-</tr>
+<td>afterMethod</td>
+<td>&nbsp;</td></tr>
 </table>
