--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,18 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="95b4a9">  <td>25/01/20 10:07:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.methodAfterClass()[pri:0, instance:createContact.CreateContact_T01Test@5542c4ed]">&lt;&lt;methodAfterClass</td> 
+<tr bgcolor="627689">  <td>25/02/23 15:09:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod()[pri:0, instance:createLeads.TC_01@40a4337a]">&lt;&lt;afterMethod</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="95b4a9">  <td>25/01/20 10:07:37</td>   <td>-2216</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.methodAfterMethod()[pri:0, instance:createContact.CreateContact_T01Test@5542c4ed]">&lt;&lt;methodAfterMethod</td> 
-<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="95b4a9">  <td>25/01/20 10:07:41</td>   <td>1483</td> <td title="&lt;&lt;BaseClass.methodAfterSuite()[pri:0, instance:createContact.CreateContact_T01Test@5542c4ed]">&lt;&lt;methodAfterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="95b4a9">  <td>25/01/20 10:07:10</td>   <td>-29722</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.methodBeforeClass()[pri:0, instance:createContact.CreateContact_T01Test@5542c4ed]">&gt;&gt;methodBeforeClass</td> 
+<tr bgcolor="627689">  <td>25/02/23 15:08:41</td>   <td>-32154</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod()[pri:0, instance:createLeads.TC_01@40a4337a]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="95b4a9">  <td>25/01/20 10:07:15</td>   <td>-24168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.methodBeforeMethod()[pri:0, instance:createContact.CreateContact_T01Test@5542c4ed]">&gt;&gt;methodBeforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="95b4a9">  <td>25/01/20 10:07:09</td>   <td>-30265</td> <td title="&gt;&gt;BaseClass.methodBeforeSuite()[pri:0, instance:createContact.CreateContact_T01Test@5542c4ed]">&gt;&gt;methodBeforeSuite</td> 
+<tr bgcolor="627689">  <td>25/02/23 15:08:41</td>   <td>-32189</td> <td title="&gt;&gt;BaseClass.beforeSuite()[pri:0, instance:createLeads.TC_01@40a4337a]">&gt;&gt;beforeSuite</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="626db4">  <td>25/01/20 10:07:19</td>   <td>-20700</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContact_T01Test.tc01Test()[pri:0, instance:createContact.CreateContact_T01Test@5542c4ed]">tc01Test</td> 
+<tr bgcolor="627689">  <td>25/02/23 15:09:15</td>   <td>1706</td> <td title="&lt;&lt;BaseClass.methodAfterSuite()[pri:0, instance:createLeads.TC_01@40a4337a]">&lt;&lt;methodAfterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
+<tr bgcolor="646283">  <td>25/02/23 15:08:52</td>   <td>-21293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01.methodTC_01()[pri:0, instance:createLeads.TC_01@40a4337a]">methodTC_01</td> 
   <td>main@1554547125</td>   <td></td> </tr>
 </table>
