--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,3 +1,3 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>createContact.CreateContact_T01Test.demo</td></tr>
+<tr><td>createLeads.TC_01.methodTC_02</td></tr>
 </table>
